wren-macros/tests/foreign_static_method/04-should_not_accept_native_context.failure.stderr
error[E0308]: mismatched types
 --> tests/foreign_static_method/04-should_not_accept_native_context.failure.rs:8:17
  |
8 | fn foreign_test(context: &mut Context<'_, Native>, a: f64) -> f64 {
  |                 ^^^^^^^ expected struct `wren::context::Foreign`, found struct `Native`
  |
  = note: expected mutable reference `&mut wren::Context<'_, _, wren::context::Foreign>`
             found mutable reference `&mut wren::Context<'_, wren::test::UserData<'_>, Native>`
